# Andarna

./: .gitignore  CLAUDE.md  NOTES.md  PROFILING_REPORT.md  README.md  visualizer.html
.github/workflows/: proj3_fast_checks.yml  proj3_matrix.yml  proj3_perturbation_sweep.yml  proj3_regression_check.yml  proj3_sim_validation.yml
Andarna-p4/: .gitignore  PROFILING_REPORT.md  README.md
Andarna-p4/analysis/: visualize.py
Andarna-p4/optimization/: __init__.py  batch_scaling_test.py
Andarna-p4/profiling/: __init__.py  component_timer.py  nsight_runner.py  torch_profiler.py
Andarna-p4/quantization/: __init__.py  accuracy_validator.py
Andarna-p4/results/: README.md
Andarna-p4/scripts/: install_ec2.sh  run_baseline_latency.py  run_component_breakdown.py  run_reproducibility.py
Andarna-p4/tests/: __init__.py
analysis/: __init__.py  action_dim_breakdown.py  roofline.py
colab/: README_colab.md
openvla-robustness/: README.md  ROBUSTNESS_REPORT.md  requirements-local.txt
openvla-robustness/figures/: behavioral_summary.json
openvla-robustness/robustness/: __init__.py  analysis.py  degradations.py  test_analysis.py  test_degradations.py
openvla-robustness/scripts/: finetune.py  libero_eval.py  run_baseline.py  run_degradation.py  run_full_sweep.py
openvla-robustness/setup/: install_remote.py  verify.py
optimization/: torch_compile_test.py
outputs/results/: eval_info.json
profiling/: memory_profiler.py  nsight_runner.py
quantization/: precision_runner.py
results/baseline/: baseline_latency_bf16.json  component_breakdown_bf16.json
results/behavioral/: libero_success.json
results/memory/: memory_stability.json
robotics-test-infra/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  TESTING_PHILOSOPHY.md  pyproject.toml
robotics-test-infra/artifacts/: .gitignore
robotics-test-infra/baselines/: baseline_metrics.json
robotics-test-infra/scripts/: benchmark.py  check_determinism.py  generate_report.py  preflight.py  run_evaluation.py  run_perturbation_sweep.py  update_baseline.py
robotics-test-infra/src/: __init__.py  config.py  evaluator.py  metrics.py  perturbation_tests.py  reporter.py  validation.py  video_capture.py
robotics-test-infra/tests/integration/: test_determinism.py  test_full_pipeline.py
robotics-test-infra/tests/unit/: test_config.py  test_evaluator.py  test_metrics.py  test_perturbation.py  test_reporter.py  test_validation.py  test_video_capture.py
scripts/: 01_verify.py  02_explore_dataset.py  03_train_act.sh  04_eval_sim.sh  04b_inference_heldout.py  05_eval_libero.sh  _list_envs.py  _test_render.py  install_ec2.sh  run_libero_eval.py
(+50 files in other folders)
