[project]
name = "robotics-test-infra"
version = "0.1.0"
description = "Software-in-the-loop (SIL) test & validation framework for a LeRobot policy in MuJoCo, wired into a three-tier GitHub Actions CI/CD pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Zoey Ballard" }]

# --- "Light" dependencies ---
# These are all Tier-1 CI (lint + unit tests) needs. NO MuJoCo / torch / lerobot
# here on purpose: the config/metrics/reporter modules are pure-Python + numpy so
# unit tests run in seconds on a bare runner. The evaluator imports the heavy sim
# stack lazily (inside methods), so `import src.evaluator` works without it.
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# --- "Heavy" simulation stack (Tier 2/3, run inside Docker) ---
# Pinned to the versions validated in Project 1 (CPU-only, MuJoCo 3.8).
sim = [
    "lerobot==0.4.4",  # the version the published ACT checkpoint was trained+validated with
    "gym-aloha==0.1.4",
    "mujoco==3.8.1",
    "gymnasium==1.3.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "pillow>=10.0",       # text overlays on captured frames
]
# --- Dev / test tooling (Tier 1) ---
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "psutil>=5.9",        # peak-RSS measurement in the benchmark suite (Phase 5b)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# `src` is an importable package (mirrors the layout in the project spec); tests
# and scripts do `import src.config`, etc. `py-modules = []` stops setuptools from
# auto-discovering stray top-level modules.
packages = ["src"]

[tool.pytest.ini_options]
# Run pytest from the robotics-test-infra/ root; this puts `.` on sys.path so
# `import src.config` and `import tests...` resolve without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "sim: tests that require the full MuJoCo/LeRobot simulation stack (skipped on lean Tier-1 runners)",
    "slow: tests that run real evaluation episodes (minutes, not seconds)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; long strings in reports are fine

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # lerobot/mujoco/etc. ship no stubs
warn_unused_ignores = false
check_untyped_defs = true
